--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <router-outlet></router-outlet>
+
 <button routerLink="/jokes">jokes</button>
 <button routerLink="/animals">Awww</button>
+<div *ngFor="let message of flashMessageService.messages$ | async">
+    <flash-message [message]="message.message" [type]="message.type"></flash-message>
+</div>
