adds ajax spinner service and component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
+<ajax-spinner *ngIf="ajaxStateService.fetching"></ajax-spinner>
 <router-outlet></router-outlet>
-
 <button routerLink="/jokes">jokes</button>
 <button routerLink="/animals">Awww</button>
 <div *ngFor="let message of flashMessageService.messages$ | async">
