--- a/src/app/jokes/components/joke/joke.component.html
+++ b/src/app/jokes/components/joke/joke.component.html
@@ -1,4 +1,6 @@
+
 <div class="joke-wrapper">
+  <button (click)="addToFavorites()">favorite</button>
   <div class="joke-setup">{{ setup }}></div>
   <div *ngIf="deliveryIsVisible" class="joke-delivery">{{ delivery }}</div>
   <br />
@@ -8,6 +10,7 @@
 
 <br />
 <a
+  target="_blank"
   href="https://github.com/Sv443/JokeAPI/issues/new?assignees=Sv443&labels=reported+joke&template=3_report_a_joke.md&title="
-  >report offensive joke</a
+  >report joke #{{ id }}</a
 >
