--- a/src/app/components/ajax-spinner/ajax-spinner.component.scss
+++ b/src/app/components/ajax-spinner/ajax-spinner.component.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  visibility: hidden;
 
   .spinner-background {
     top: 50%;
@@ -10,6 +11,7 @@
     position: absolute;
     width: 100px;
     height: 100px;
+    visibility: visible;
 
     .spinner,
     .spinner:after {
